--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
 
         <nav class="header__nav">
             <ul class="menu-horizontal">
-                
+
                 <!--             <li class="header__nav__li"><a href="/products/edit">Editar</a></li>
  -->
                 <li>
@@ -35,18 +35,19 @@
                         <li><a href="/products/all/cocina">Cocina</a></li>
                     </ul>
                 </li>
-               
+
                 <% if (locals.userLogin) { %>
-                    <li><a href="/users/profile"></a>Mi perfil</li>
-                    <li><a href="/users/logout"></a>Salir</li>
-                    <% if (userLogin.rol==="admin" ) { %>
+                    <li class="header__nav__li"><a href="/users/profile">Mi perfil</a></li>
+                    <li class="header__nav__li"><a href="/users/logout">Salir</a></li>
+                    <% if (userLogin.rol === "admin" ) { %>
                         <li class="header__nav__li"><a href="/products/create">Vender</a></li>
                         <% } %>
                             <% }else{ %>
                                 <li class="header__nav__li"><a href="/users/register">Crear cuenta</a></li>
                                 <li class="header__nav__li"><a href="/users/login">Ingresa</a></li>
                                 <% } %>
-                                <li class="header__nav__li"><a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                                    <li class="header__nav__li"><a href="/products/cart"><i
+                                                class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
         </nav>
     </section>
