--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,8 @@
                         <li><a href="/products/all/cocina">Cocina</a></li>
                     </ul>
                 </li>
-
+            </ul>
+            <ul class="menu-horizontal">
                 <% if (locals.userLogin) { %>
                     <li class="header__nav__li"><a href="/users/profile">Mi perfil</a></li>
                     <li class="header__nav__li"><a href="/users/logout">Salir</a></li>
