--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,10 +37,10 @@
                 </li>
             </ul>
             <ul class="menu-horizontal">
-                <% if (locals.userLogin) { %>
+                <% if (locals.userLogged) { %>
                     <li class="header__nav__li"><a href="/users/profile">Mi perfil</a></li>
                     <li class="header__nav__li"><a href="/users/logout">Salir</a></li>
-                    <% if (userLogin.rol === "admin" ) { %>
+                    <% if (userLogged.rol === "admin" ) { %>
                         <li class="header__nav__li"><a href="/products/create">Vender</a></li>
                         <% } %>
                             <% }else{ %>
