--- a/views/register.ejs
+++ b/views/register.ejs
@@ -67,8 +67,12 @@
 
                                         <div class="col-md-6 my-1">
                                             <div class="form-group">
-                                                <label for="telefono">Telefono</label>
-                                                <input class="form-control" type="tel" name="telefono" id="telefono">
+
+                                                <label for="rol">Rol</label>
+                                                <select class="form-control" name="rol" id="rol">
+                                                    <option value="admin">Admin</option>
+                                                    <option value="usuario">Usuario</option>
+                                                </select>
                                             </div>
                                         </div>
 
