--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,6 +38,7 @@
             </ul>
             <ul class="menu-horizontal">
                 <% if (locals.userLogged) { %>
+                    <a class="" href="#"><img src="/img/avatars/<%= locals.userLogged.avatar %>" width="40" style="border-radius: 100%;"></a>
                     <li class="header__nav__li"><a href="/users/profile">Mi perfil</a></li>
                     <li class="header__nav__li"><a href="/users/logout">Salir</a></li>
                     <% if (userLogged.rol === "admin" ) { %>
