--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,7 +21,7 @@
                                         <div class="col-md-6 my-1">
                                             <div class="form-group">
                                                 <label for="name">Nombre completo</label>
-                                                <input class="form-control" type="text" name="name" id="name">
+                                                <input class="form-control" type="text" name="name" id="name" value="<%= locals.oldData ? oldData.name : null  %>">
                                                 <p class="form__error__msg">
                                                     <%= locals.errors && errors.name ? errors.name.msg : null %>
                                                 </p>
@@ -43,7 +43,7 @@
                                         <div class="col-md-6 my-1">
                                             <div class="form-group">
                                                 <label for="email">E-mail</label>
-                                                <input class="form-control" type="email" name="email" id="email">
+                                                <input class="form-control" type="email" name="email" id="email" value=" <%= locals.oldData ? oldData.email : null  %>">
                                                 <p class="form__error__msg">
                                                     <%= locals.errors && errors.email ? errors.email.msg : null %>
                                                 </p>
