--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,56 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head') %> 
-<body class="body">
-    <!-- HEADER -->
-    <%- include('./partials/header') %> 
-    <main class="main">
-        <a href="#"><img  class="main__section__banner__img" src="/img/ofertas-banner2.jpg" alt=""></a>
-        <h2>Lo mejor para tu hogar</h2>
-        <section class="main__section">
-            <% loMejor.forEach(({id,title, image,discount,price}) => { %>
-            <div class="main__section__caja">
-            <a href="/products/detail/<%= id %> "><img  class ="main__section__img" src="/img/<%= image %>" alt=""></a>
-            <div class="main__section__texto">
-            <h5><%= title %> </h5>
-            <p class="">$<%= toThousand(price) %> </p>
-            <p class=""><%= discount %> % OFF</p>  
-            </div>    
-            </div>  
-              <% }) %>
-            <div class="main__section__img__banner">                
-                <h2>Ofertas en todos los productos</h2>
-                <a href="#"><img  class="main__section__banner__img__2" src="/img/banner4.jpg" alt=""></a>
-            <h2>Mejores ofertas</h2>
-            </div>  
-            
-            <% oferta.forEach(({id,title, image,discount,price}) => { %>
-                <div class="main__section__caja">
-                <a href="/products/detail/<%= id %> "><img  class ="main__section__img" src="/img/<%= image %>" alt=""></a>
-                <div class="main__section__texto">
-                <h5><%= title %> </h5>
-                <p class="">$<%= toThousand(price) %> </p>
-                <p class=""><%= discount %> % OFF</p>  
-                </div>    
-                </div>  
-            <% }) %>
-        </section>
-    </main>
-    <a href="/" class="outsidelogo"  ><img   width="60px" height="60px" src="/img/logo 1.png" alt="logo"></a>
-<!-- FOOTER -->
-<%- include('./partials/footer') %> 
-</body>
-</html>
-
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
 <%- include('./partials/head') %>
 
     <body class="body">
@@ -70,7 +19,7 @@
                     </ul>
                 </div>
                 <!-- Banner -->
-<!--                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -105,7 +54,7 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
-                </div> -->
+                </div> 
                 <!-- Banner -->
 
                 <section class="main__section">
@@ -162,7 +111,7 @@
 
                     <!-- banner body -->
 
-<!--                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -193,7 +142,7 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
-                    </div> -->
+                    </div> 
 
                     <!-- Banner body -->
 
@@ -219,6 +168,10 @@
                                 <% }) %>
                         </div>
                     </section>
+
+
+
+
 
                     <section class="interesting_products">
                         <h3>Consolas en New Home</h3>
