--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,55 +1,35 @@
 <header class="header">
     <section class="header__section">
         <div class="header__section__text">
-            <h1>New Home</h1>
-            <p>- Lo mejor para tu hogar -</p>
+            <a href="/">
+                <h1>NewHome <i class="fa-solid fa-house-laptop"></i></h1>
+            </a>
         </div>
-        <div class="header__section__img">
-            <a href="/"><img class="header__section__logo" src="/img/logo2.jpg" alt="logo"></a>
-        </div>
-        <div class="header__section__menu">
-            <i id="burguer" class="fa-solid fa-bars"></i>
-            <form action="/search" method="GET" class="header__section__barra">
-                <input class="search" placeholder="Buscar productos,marcas y mas..." type="text" name="keywords">
-                <button class="header__section__button"><i class="fa-solid fa-magnifying-glass"></i></button>
+        <div class="col-7 col-md-6">
+            <form action="/search" method="GET" class="search-form">
+                <input type="text" name="keywords" placeholder="Buscar productos, marcas y más"
+                    class="search-form_input">
+                <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
             </form>
         </div>
 
         <nav class="header__nav">
-            <ul class="menu-horizontal">
-
-                <!--             <li class="header__nav__li"><a href="/products/edit">Editar</a></li>
- -->
-                <li>
-                    <a href="#">Categorias</a>
-                    <ul class="menu-vertical">
-
-                        <li><a href="/products/all/tv ">Televisores</a></li>
-                        <li><a href="/products/all/celulares">Celulares</a></li>
-                        <li><a href="/products/all/audio">Equipos de audio</a></li>
-                        <li><a href="/products/all/consolas">Consolas</a></li>
-                        <li><a href="/products/all/hogar">Hogar</a></li>
-                        <li><a href="/products/all/muebles">Muebles</a></li>
-                        <li><a href="/products/all/climatizacion">Climatización</a></li>
-                        <li><a href="/products/all/lavado">Lavado</a></li>
-                        <li><a href="/products/all/cocina">Cocina</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="menu-horizontal">
+            <ul class="ul-navbar">
+                <li><a href="/products/all">Todos los productos</a></li>
                 <% if (locals.userLogged) { %>
-                    <a class="" href="#"><img src="/img/avatars/<%= locals.userLogged.avatar %>" width="40" style="border-radius: 100%;"></a>
                     <li class="header__nav__li"><a href="/users/profile">Mi perfil</a></li>
-                    <li class="header__nav__li"><a href="/users/logout">Salir</a></li>
-                    <% if (userLogged.rol === "admin" ) { %>
+                    <li class="header__nav__li"><a href="/users/logoutV">Salir</a></li>
+                    <% if (userLogged.rol==="admin" ) { %>
                         <li class="header__nav__li"><a href="/products/create">Vender</a></li>
                         <% } %>
                             <% }else{ %>
                                 <li class="header__nav__li"><a href="/users/register">Crear cuenta</a></li>
                                 <li class="header__nav__li"><a href="/users/login">Ingresa</a></li>
                                 <% } %>
-                                    <li class="header__nav__li"><a href="/products/cart"><i
-                                                class="fa-solid fa-cart-shopping"></i></a></li>
+                                    <li class="header__nav__li"><a href="/products/cart">
+                                            <iclass="fa-solid fa-cart-shopping">
+                                                </iclass=>
+                                        </a></li>
             </ul>
         </nav>
     </section>
