--- a/public/stylesheets/productDetail.css
+++ b/public/stylesheets/productDetail.css
@@ -1,24 +1,25 @@
-
 main {
     font-family: 'Roboto';
 }
 
-main h2{
+main h5 {
     font-weight: bold;
     padding: 15px;
 }
 
-.product_img{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 25px;
+.section-detail {
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
-.product_img img{
-    border-radius: 10px;
+.producto img {
+    margin-top: 20%;
+    margin-left: 20%;
+    width: 50%;
+    object-fit: contain;
 }
 
-.more_img_box{
+.more_img_box {
     display: flex;
     width: 90%;
     gap: 20px;
@@ -30,19 +31,19 @@ main h2{
     margin-left: 10px;
 }
 
-.more_img_box i{
+.more_img_box i {
     margin: 15px 0 20px 5px;
     border: 2px solid black;
     border-radius: 100%;
     font-size: 30px;
 }
 
-.more_img_box img{
+.more_img_box img {
     border-radius: 5px;
     border: 1px solid #474545;
 }
 
-.more_img_box{
+.more_img_box {
     display: none;
 }
 
@@ -53,10 +54,11 @@ main h2{
     border-bottom: 1px solid #ebebeb;
     border-top: 1px solid #ebebeb;
     margin: 5%;
-    
+
 }
 
-.price h2{
+.price h6 {
+
     padding: 0;
     margin-top: 15px;
     margin-bottom: 10px;
@@ -80,22 +82,23 @@ main h2{
     gap: 15px;
     padding-left: 15px;
     padding-bottom: 10px;
-    
+
 }
 
 .buttons {
     display: flex;
-    gap: 25px;
+    gap: 10px;
     justify-content: center;
     margin: 10px;
-    padding-bottom: 10px;
     text-align: center;
-    
+    margin-right: 10%;
+
 }
 
-.buttons a{
-    background-color: #72223E;
-    padding: 7px;
+.buttons a {
+    font-size: 15px;
+    background-color: #181818;
+    padding: 10px;
     border-radius: 10px;
     color: white;
     font-weight: 600;
@@ -113,7 +116,7 @@ main h2{
     border-bottom: 1px solid #ebebeb;
 }
 
-.caracteristicas li{
+.caracteristicas li {
     font-size: 14px;
     background-color: #ebebeb;
     border-radius: 5px;
@@ -131,57 +134,20 @@ main h2{
     border-bottom: 1px solid #ebebeb;
 }
 
-.description h4{
+.description h4 {
     margin-bottom: 10px;
     font: 16px;
     font-weight: 600px;
 }
 
-.description p{
+.description p {
     font: 500;
     margin-bottom: 15px;
     font-size: 14px;
 }
 
-/* Productos interesantes */
 
-.interesting_products{
-    width: 90%;
-    margin-left: 5%;
-    padding: 10px;
-    border-bottom: 1px solid #ebebeb;
-    margin-bottom: 20px;
-}
 
-.interesting_products article{
-    margin: 15px;
-    border: 1px solid #ebebeb;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    background-color: white;
-}
-
-.interesting_products img{
-    width: 100%;
-    height: 200px;
-    object-fit: contain;
-}
-
-.interesting_products h5{
-    padding: 5px;
-    text-align: inherit;
-    font-size: 16px;
-    font-weight: 100px;
-}
-
-.interesting_products_border{
-    border-top: 1px solid #ebebeb;
-}
-
-.color_verde{
-    color: #39b54a;
-    font-size: 14px;
-}
 
 .send {
     display: none;
@@ -191,103 +157,91 @@ main h2{
     display: none;
 }
 
-@media (min-width:768px){
+@media (min-width:768px) {
 
-.send{
-    display: inline-block;
-    font-family: 'Roboto';
-    font-size: 16px;
+    .send {
+        display: inline-block;
+        font-family: 'Roboto';
+        font-size: 16px;
+    }
+
+    #flecha {
+        display: inline-block;
+    }
+
+    .send i {
+        font-size: 25px;
+    }
+
+    .cuandollega {
+        padding: 0;
+        padding-bottom: 10px;
+        display: flex;
+    }
+
+    .sucursales {
+        padding: 0;
+        padding-bottom: 10px;
+        display: flex;
+    }
+
+    .sendtexto {
+        display: block;
+        padding-left: 10px;
+    }
+
+    .sendblue {
+        font-size: 14px;
+        color: #1C18BD;
+    }
+
+    .producto {
+        width: 70%;
+    }
+
+    .price {
+        width: 30%;
+        border: 1px solid #ebebeb;
+        border-radius: 10px;
+    }
+
+    .maintop {
+        width: 90%;
+        display: flex;
+        margin-left: 5%;
+        border-bottom: 1px solid #ebebeb;
+        margin-bottom: 20px;
+    }
+
+    .interesting_products {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    .interesting_products article {
+        width: 320px;
+
+    }
 }
 
-#flecha {
-    display: inline-block;
-}
+@media (min-width:1024px) {
 
-.send i{
-    font-size: 25px;
-}
+    .containsproduct {
+        display: flex;
+        /* justify-content: space-around; */
 
-.cuandollega{
-    padding: 0;
-    padding-bottom: 10px;
-    display: flex;
-}
 
-.sucursales{
-    padding: 0;
-    padding-bottom: 10px;
-    display: flex;
-}
+    }
 
-.sendtexto{
-    display: block;
-    padding-left: 10px;
-}
+    .interesting_products article {
+        width: 300px;
 
-.sendblue{
-    font-size: 14px;
-    color: #1C18BD;
-}
 
-.producto{
-    width: 70%;
-}
+    }
 
-.price{
-    width: 30%;
-    border: 1px solid #ebebeb;
-    border-radius: 10px;
-}
-    
-.maintop {
-    width: 90%;
-    display: flex;
-    margin-left: 5%;
-    border-bottom: 1px solid #ebebeb;
-    margin-bottom: 20px;
-}
-
-.interesting_products{
-    width: 90%;
-    margin-left: 5%;
-}
-
-.interesting_products article{
-    width: 320px;
-    
-}
-
-.containsproduct{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-    
-}
-
-@media (min-width:1024px){
-
-.containsproduct{
-    display: flex;
-    /* justify-content: space-around; */
-    
-    
-}
-
-.interesting_products article{
-    width: 300px;
-    
-    
-}
-
-.main_allProducts{
-    width: 90%;
-    height: 700px;
-}
+    .main_allProducts {
+        width: 90%;
+        height: 700px;
+    }
 
 }
-
-
-
-
-
-
