--- a/views/register.ejs
+++ b/views/register.ejs
@@ -50,7 +50,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-md-6 my-1">
+                                        <!-- <div class="col-md-6 my-1">
                                             <div class="form-group">
 
                                                 <label for="country">Pais</label>
@@ -63,7 +63,7 @@
                                                     <option value="Brazil">Brazil</option>
                                                 </select>
                                             </div>
-                                        </div>
+                                        </div> -->
 
                                         <div class="col-md-6 my-1">
                                             <div class="form-group">
