--- a/views/edition.ejs
+++ b/views/edition.ejs
@@ -51,7 +51,7 @@
 
                     <div class="col-12 col-md-6">
                       <label for="category" class="form-label">sub Categoría:</label>
-                      <select name="categoryId" id="category" class="form-input">
+                      <select name="subcategoryId" id="category" class="form-input">
                         <% subcategories.forEach(({id, name})=> { %>
                           <option value="<%= id %>" <%=id===product.subcategoryId && 'selected' %>><%= name %>
                           </option>
