--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -10,7 +10,7 @@
 				<% if (products.length> 0) { %>
 								<section class="main__section">
 									<section class="interesting_products">
-										<h3>Tus resultados sobre: </h3>
+										<h3>Tus resultados son: </h3>
 										<div class="containsproduct">
 											<% products.forEach(({id,name, images,discount,price})=> { %>
 												<article>
