--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -1,37 +1,42 @@
-.main-form{
+.main-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 .section-form {
     width: 30%;
     margin-top: 3%;
     margin-bottom: 10%;
     box-shadow: 0px 0px 30px rgb(110, 110, 110);
 }
-.section-form h4{
+
+.section-form h4 {
     padding-top: 5%;
     margin-left: 10%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
 }
 
-.form-reg{
+.form-reg {
     margin-right: 10%;
     margin-left: 10%;
 }
-.form-reg label{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+.form-reg label {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
     font-size: 13px;
 }
-.form-reg input{
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+
+.form-reg input {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 13px;
     border-radius: 0%;
 }
-.form-reg button{
+
+.form-reg button {
     width: 100%;
     height: 40px;
     border: #2874e6;
@@ -41,16 +46,51 @@
     transition: 100ms;
 
 }
-.form-reg button:hover{
+
+.form-reg button:hover {
     opacity: 0.7;
 }
-.text-form{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: rgb(226, 226, 226);
-        margin: 5% 10% 5% 10%;
-        padding-top:5%;
-        
+
+.text-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    margin: 5% 10% 5% 10%;
+    padding-top: 5%;
+}
+
+.form-country {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5%;
+}
+
+.form-country label {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: black;
+    font-size: 13px;
+    margin-left: 10%;
+}
+.form-country select{
+    margin-left: 10%;
+    width: 80%;
+}
+.form-province {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5%;
+}
+
+.form-province label {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: black;
+    font-size: 13px;
+    margin-left: 10%;
+}
+
+.form-province select {
+    margin-left: 10%;
+    width: 80%;
 }
