--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -143,7 +143,7 @@
                                         class="d-block w-100" alt="..."></a>
                             </div>
                             <div class="carousel-item">
-                                <a href="/category/notebook&smartphone/<%= smartphone.id %> "><img
+                                <a href="/category/smartphone/<%= smartphone.id %> "><img
                                         src="/img/banner/img_baner_5.png" class="d-block w-100" alt="..."></a>
                             </div>
                             <div class="carousel-item">
@@ -169,9 +169,9 @@
                     <!-- Banner body -->
 
                     <section class="interesting_products">
-                        <h3>Tv en New Home</h3>
+                        <h3>Electrodomesticos en New Home</h3>
                         <div class="containsproduct">
-                            <% tv.products.forEach(({id,name, images,discount,price})=> { %>
+                            <% electrodomesticos.products.forEach(({id,name, images,discount,price})=> { %>
                                 <article>
                                     <a href="/products/detail/<%= id %> "><img class="main__section__img"
                                             src="/img/<%= images[0].file %>" alt=""></a>
@@ -192,9 +192,9 @@
                     </section>
 
                     <section class="interesting_products">
-                        <h3>Consolas en New Home</h3>
+                        <h3>Muebles en New Home</h3>
                         <div class="containsproduct">
-                            <% console.products.forEach(({id,name, images,discount,price})=> { %>
+                            <% muebles.products.forEach(({id,name, images,discount,price})=> { %>
                                 <article>
                                     <a href="/products/detail/<%= id %> "><img class="main__section__img"
                                             src="/img/<%= images[0].file %>" alt=""></a>
