--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -10,7 +10,8 @@
                 <form action="" method="POST" enctype="multipart/form-data">
                     <div class="form-reg">
                         <label for="name">NOMBRE</label>
-                        <input placeholder="Daniel" type="text" name="name" id="name" value="<%= locals.old && old.name ? old.name : null %>"
+                        <input placeholder="Daniel" type="text" name="name" id="name"
+                            value="<%= locals.old && old.name ? old.name : null %>"
                             class="form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>">
                         <p class="text-danger">
                             <%= locals.errors && errors.name ? errors.name.msg : null %>
@@ -43,27 +44,31 @@
                             <%= locals.errors && errors.password ? errors.password.msg : null %>
                         </p>
                     </div>
-                    <div class="form-reg">
-                        <label for="country">PAÍS</label>
-                        <input placeholder="Argentina" type="text" name="country" id="country"
-                            value="<%= locals.old && old.country ? old.country : null %>"
-                            class="form-control <%= locals.errors && errors.country ? 'is-invalid' : null %>">
-                        <p class="text-danger">
-                            <%= locals.errors && errors.country ? errors.country.msg : null %>
-                        </p>
+                    <div class="form-country">
+                        <label  for="countries">PAIS</label>
+                        <select name="countries" id="countries" class="form-input">
+                            <% countries.forEach(({name})=> { %>
+                                <option class="option-country">
+                                    <%= name %>
+                                </option>
+                                <% }) %>
+                        </select>
+
                     </div>
-                    <div class="form-reg">
+                    <div class="form-province">
                         <label for="province">PROVINCIA</label>
-                        <input placeholder="Buenos Aires" type="text" name="province" id="province"
-                            value="<%= locals.old && old.province ? old.province : null %>"
-                            class="form-control <%= locals.errors && errors.province ? 'is-invalid' : null %>">
-                        <p class="text-danger">
-                            <%= locals.errors && errors.province ? errors.province.msg : null %>
-                        </p>
+                        <select name="province" id="province" class="form-input">
+                            <% provinces.forEach(({name})=> { %>
+                                <option>
+                                    <%= name %>
+                                </option>
+                                <% }) %>
+                        </select>
                     </div>
                     <div class="form-reg">
                         <label for="city">CIUDAD</label>
-                        <input placeholder="Escobar" type="text" name="city" id="city" value="<%= locals.old && old.city ? old.city : null %>"
+                        <input placeholder="Escobar" type="text" name="city" id="city"
+                            value="<%= locals.old && old.city ? old.city : null %>"
                             class="form-control <%= locals.errors && errors.city ? 'is-invalid' : null %>">
                         <p class="text-danger">
                             <%= locals.errors && errors.city ? errors.city.msg : null %>
@@ -81,16 +86,17 @@
                         </p>
                     </div>
                     <div class="form-reg">
-                    <button class="" type="submit">CREAR CUENTA</button>
+                        <button class="" type="submit">CREAR CUENTA</button>
                     </div>
 
-                    <div class="text-form" >
-                    <p class="login-text">¿Ya tenes una cuenta?</p>
-                    <p><a href="/users/login">INGRESAR</a></p>
+                    <div class="text-form">
+                        <p class="login-text">¿Ya tenes una cuenta?</p>
+                        <p><a href="/users/login">INGRESAR</a></p>
                     </div>
                 </form>
             </section>
         </main>
 
     </body>
+
 </html>
