--- a/src/views/products/category.ejs
+++ b/src/views/products/category.ejs
@@ -4,34 +4,62 @@
 
     <body class="body-all">
         <%- include('../partials/header') %>
-            <main class="main-all">
-                <% if (category.products.length > 0) { %>
-                <h3>Todos los <%= category.name %> en New Home</h3>
-                <section class="section-all">
-                    <% category.products.forEach(({id,name,images,discount,price})=> { %>
-                        <article class="product-all">
-                            <div class="div-all">
-                                <a href="/products/detail/<%= id %> "><img class="img-all"
-                                        src="/img/<%= images[0].file %>" alt=""></a>
-                                <div class="text-all">
-                                    <h2>$<%= toThousand(price - (price * discount / 100)) %>
-                                    </h2>
-                                    <span>
-                                        <%= discount %> % OFF
-                                    </span>
-                                    <p>
-                                        <%= name %>
-                                    </p>
+
+            <main class="main-result">
+                <!--                 <div class="volver-home">
+                    <a href="/"><i class="fa-thin fa-arrow-left-from-line"></i> Volver</a>
+                </div> -->
+                <% if (category.products.length> 0) { %>
+                    <h3>Todo en <%= category.name %> New Home</h3>
+                    <section class="section-result">
+                        <% category.products.forEach(({id,name,images,discount,price})=> { %>
+                            <article class="product-result">
+                                <div class="div-result">
+                                    <a href="/products/detail/<%= id %> "><img class="img-result"
+                                            src="/img/<%= images[0].file %>" alt=""></a>
+                                    <div class="text-result">
+                                        <h2>$<%= toThousand(price - (price * discount / 100)) %>
+                                        </h2>
+                                        <span>
+                                            <%= discount %> % OFF
+                                        </span>
+                                        <p>
+                                            <%= name %>
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                        </article>
-                        <% }) %> 
-                <% } else {%>
-                    <div class="result-failed">
-						<h2 class="products-title" style="color: tomato;">No hay productos que coincidan con esabúsqueda</h2>
-					</div>
-                <% } %>
-                </section>
+                            </article>
+                            <% }) %>
+                                <% } else {%>
+                                    <div class="msj-category">
+                                    <p>No se encontraron productos en esta categoria</p>
+                                    </div>
+                                    <section class="interesting_products">
+                                        <h2 style="font-family: 'roboto'; margin-left : 2%;">Aprovechá los precios mas bajos</h2>
+                                        <div class="containsproduct">
+                                            <% cheap.forEach(({id,name, images,discount,price})=> { %>
+                                                <article>
+                                                    <a href="/products/detail/<%= id %> "><img
+                                                            class="main__section__img" src="/img/<%= images[0].file %>"
+                                                            alt=""></a>
+                                                    <div class="article-text">
+                                                        <p class="p2"><del>$<%= toThousand(price) %></del></p>
+                                                        <h2 style="padding-right: 20px;">$<%= toThousand(price - (price
+                                                                * discount / 100)) %>
+                                                        </h2>
+                                                        <span>
+                                                            <%= discount %>%OFF
+                                                        </span>
+                                                        <p>
+                                                            <%= name %>
+                                                        </p>
+                                                    </div>
+                                                </article>
+                                                <% }) %>
+                                        </div>
+                                    </section>
+                                    <% } %>
+                    </section>
             </main>
             <!-- FOOTER -->
             <%- include('../partials/footer') %>
