--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -7,7 +7,7 @@
         <main class="main-form">
             <section class="section-form" style="padding-bottom: 5%;">
                 <h4>EDITAR CUENTA</h4>
-                <form action="/users/update/<%= user.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+                <form action="/users/update/<%= user.id %>?_method=PUT" method="POST">
                     <div class="form-reg">
                         <label for="name">NOMBRE</label>
                         <input placeholder="Daniel" type="text" name="name" id="name"
