--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,7 @@
                 <div class="category">
                     <ul>
                         <% category.forEach(({id,name})=> { %>
-                            <li><a href="/category/category/<%= id %>">
+                            <li><a href="/category/<%= id %>">
                                     <%= name %>
                                 </a></li>
                             <% }) %>
