--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -75,7 +75,7 @@
                                 <div id="menu">
                                     <ul>
                                         <% category.forEach(({id,name})=> { %>
-                                            <li><a href="/category/category/<%= id %>">
+                                            <li><a href="/category/<%= id %>">
                                                     <%= name %>
                                                 </a></li>
                                             <% }) %>
