category and index

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -72,7 +72,7 @@
 
 
 
-                                <div id="menu">
+                               <!--  <div id="menu">
                                     <ul>
                                         <% category.forEach(({id,name})=> { %>
                                             <li><a href="/category/<%= id %>">
@@ -81,7 +81,7 @@
                                             <% }) %>
                                     </ul>
                                 </div>
-                                <span class="category-index">categoria</span>
+                                <span class="category-index">categoria</span> -->
 
                 <section class="main__section">
                     <section class="interesting_products">
