--- a/src/views/products/category.ejs
+++ b/src/views/products/category.ejs
@@ -50,8 +50,7 @@
                                             <% } %>
                                     </div>
                                     <section class="interesting_products">
-                                        <h4 style="font-family: 'roboto'; margin-left : 2%;">Aprovechá los precios mas
-                                            bajos</h4>
+                                        <h4 style="font-family: 'roboto'; margin-left : 2%;">Productos que te pueden llegar a interesar</h4>
                                         <div class="containsproduct">
                                             <% cheap.forEach(({id,name, images,discount,price})=> { %>
                                                 <article>
