--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -40,7 +40,6 @@
                 </form>
             </section>
         </main>
-
     </body>
-
+<script src="/js/userLogin.js"></script>
 </html>
