--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -96,6 +96,7 @@
                 </form>
             </section>
         </main>
+        <%- include('../partials/script') %>
 <script src="/js/register.js"></script>
     </body>
 </html>
